# vmgviewer

./: CMakeLists.txt  README.md  install.sh  main.cpp  uninstall.sh  vbody.cpp  vbody.h  vcard.cpp  vcard.h  venv.cpp  venv.h  vmgviewer.cpp  vmgviewer.h  vmgviewer.kdev4  vmsg.cpp  vmsg.h
.kdev4/: vmgviewer.kdev4
icons/: .directory
